email service, no handler exception handler